--- a/ichad-part1.Rmd
+++ b/ichad-part1.Rmd
@@ -60,57 +60,9 @@ globalData2019clean <- globalData2019 %>%
 summary(object = globalData2019clean)
 ```
 
-## Make a graph
+## Changing data types 2: Sex variable
 
 ```{r chunk7}
-globalData2019clean %>% 
-  ggplot(aes(x = country)) +
-  geom_bar()
-```
-
-## Make a fancier graph
-
-```{r chunk8}
-globalData2019clean %>% 
-  ggplot(aes(x = country)) +
-  geom_bar(fill = '#3264ce') +
-  theme_minimal() +
-  labs(y = "Number of participants",
-       x = "Country of residence",
-       title = "Survey participation by country of residence")
-  
-```
-
-## Break 
-
-* Some fun things to try on your break:
-
-    + Choose a new color from colorbrewer2.org and use it to change your bar colors 
-    
-    + Add the text `base_size = 16` inside the parentheses in the `theme_minimal()` layer and see what happens when you run the code 
-    
-    + Add the text `base_family = 'serif'` inside the parentheses in the `theme_minimal()` layer and see what happens when you run the code 
-        
-        + You can keep the `base_size` argument and add `base_family` like `base_size = 16, base_family = 'serif'` or replace `base_size` with `base_family`
-
-## Reminder: Changing data types 1
-
-```{r chunk9}
-globalData2019clean <- globalData2019 %>%
-  filter(country %in% c(16, 21, 26, 34)) %>% 
-  select(country, SEX, AGE, BETTER_GENDER, COUNTRY_SATIS, 
-         ECON_SIT, BELIEVE_GOD, GLOBAL_COMMUNITY) %>% 
-  zap_labels() %>% 
-  mutate(country = recode_factor(country,
-                             '16' = 'Kenya',
-                             '21' = 'Nigeria',
-                             '26' = 'South Africa',
-                             '34' = 'United States'))
-```
-
-## Changing data types 2
-
-```{r chunk10}
 globalData2019clean <- globalData2019 %>%
   filter(country %in% c(16, 21, 26, 34)) %>% 
   select(country, SEX, AGE, BETTER_GENDER, COUNTRY_SATIS, 
@@ -128,13 +80,13 @@ globalData2019clean <- globalData2019 %>%
 
 ## Checking your work 2
 
-```{r chunk11}
+```{r chunk8}
 summary(object = globalData2019clean)
 ```
 
-## Changing data types 3
+## Changing data types 3: Better_gender & Country_satis
 
-```{r chunk12}
+```{r chunk9}
 globalData2019clean <- globalData2019 %>%
   filter(country %in% c(16, 21, 26, 34)) %>% 
   select(country, SEX, AGE, BETTER_GENDER, COUNTRY_SATIS, 
@@ -164,11 +116,11 @@ globalData2019clean <- globalData2019 %>%
 
 ## Checking your work 3
 
-```{r chunk13}
+```{r chunk10}
 summary(object = globalData2019clean)
 ```
 
-## Recoding data: You Try It!
+## Recoding data: You Try It! (BREAK)
 
 * Look in the codebook to find the variable for ECON_SIT (note: it will be lower case in the codebook)
 
@@ -176,7 +128,9 @@ summary(object = globalData2019clean)
 
 * Run the summary() code in the next code chunk to check your work
 
-```{r chunk14}
+* Take a break! :-)
+
+```{r chunk11}
 globalData2019clean <- globalData2019 %>%
   filter(country %in% c(16, 21, 26, 34)) %>% 
   select(country, SEX, AGE, BETTER_GENDER, COUNTRY_SATIS, 
@@ -204,7 +158,7 @@ globalData2019clean <- globalData2019 %>%
 ```
 
 
-```{r chunk15}
+```{r chunk12}
 # check your work
 summary(object = globalData2019clean)
 ```
@@ -218,7 +172,7 @@ summary(object = globalData2019clean)
 
 * Add to the existing code: 
 
-```{r chunk16}
+```{r chunk13}
 globalData2019clean <- globalData2019 %>%
   filter(country %in% c(16, 21, 26, 34)) %>% 
   select(country, SEX, AGE, BETTER_GENDER, COUNTRY_SATIS, 
@@ -252,7 +206,7 @@ globalData2019clean <- globalData2019 %>%
                                   '9' = NA_character_))
 ```
 
-```{r chunk17}
+```{r chunk14}
 # check your work
 summary(object = globalData2019clean)
 ```
@@ -260,13 +214,14 @@ summary(object = globalData2019clean)
 
 ## Final recoding for age
 
-```{r chunk18}
+```{r chunk15}
 globalData2019clean <- globalData2019 %>%
   filter(country %in% c(16, 21, 26, 34)) %>% 
   select(country, SEX, AGE, BETTER_GENDER, COUNTRY_SATIS, 
          ECON_SIT, BELIEVE_GOD, GLOBAL_COMMUNITY) %>% 
   zap_labels() %>%
   mutate(AGE = na_if(AGE, 98)) %>% 
+  mutate(AGE = na_if(AGE, 99)) %>% 
   mutate(country = recode_factor(country,
                              '16' = 'Kenya',
                              '21' = 'Nigeria',
@@ -313,7 +268,7 @@ globalData2019clean <- globalData2019 %>%
 
 * We can start with a simple table with the `table1` package that shows the `SEX`, `AGE`, and `BETTER_GENDER` variables with their descriptive statistics
 
-```{r chunk19}
+```{r chunk16}
 table1(~ SEX + AGE + BETTER_GENDER,
        data = globalData2019clean)
 ```
@@ -322,7 +277,7 @@ table1(~ SEX + AGE + BETTER_GENDER,
 
 * Add labels for the variables and add the `BELIEVE_GOD` variable
 
-```{r chunk20}
+```{r chunk17}
 label(globalData2019clean$SEX) <- "Sex"
 label(globalData2019clean$AGE) <- "Age (years)" 
 label(globalData2019clean$BETTER_GENDER) <- "Who has a better life in this country"
@@ -332,21 +287,21 @@ label(globalData2019clean$BELIEVE_GOD) <- "Which comes closest to your opinion"
 
 ## Basic table with labels
 
-```{r chunk21}
+```{r chunk18}
 table1(~ SEX + AGE + BETTER_GENDER + BELIEVE_GOD,
        data = globalData2019clean)
 ```
 
 ## Basic table with labels and grouped by sex
 
-```{r chunk22}
+```{r chunk19}
 table1(~ AGE + BETTER_GENDER + BELIEVE_GOD | SEX,
        data = globalData2019clean)
 ```
 
 ## Basic table with labels, groups, and total
 
-```{r chunk23}
+```{r chunk20}
 table1(~ AGE + BETTER_GENDER + BELIEVE_GOD | SEX,
        data = globalData2019clean, overall = "Total")
 ```
@@ -362,9 +317,54 @@ table1(~ AGE + BETTER_GENDER + BELIEVE_GOD | SEX,
 
 * Run the code to make sure it works
 
-```{r chunk24}
+```{r chunk21}
 
 ```
+
+
+## Make a graph
+
+```{r chunk22}
+globalData2019clean %>% 
+  ggplot(aes(x = country)) +
+  geom_bar()
+```
+
+## Make a fancier graph
+
+```{r chunk23}
+globalData2019clean %>% 
+  ggplot(aes(x = country)) +
+  geom_bar(fill = '#3264ce') +
+  theme_minimal() +
+  labs(y = "Number of participants",
+       x = "Country of residence",
+       title = "Survey participation by country of residence")
+  
+```
+
+## Break 
+
+* Some fun things to try on your break:
+
+    + Choose a new color from colorbrewer2.org and use it to change your bar colors 
+    
+    + Add the text `base_size = 16` inside the parentheses in the `theme_minimal()` layer and see what happens when you run the code 
+    
+    + Add the text `base_family = 'serif'` inside the parentheses in the `theme_minimal()` layer and see what happens when you run the code 
+        
+        + You can keep the `base_size` argument and add `base_family` like `base_size = 16, base_family = 'serif'` or replace `base_size` with `base_family`
+        
+```{r chunk24}
+globalData2019clean %>% 
+  ggplot(aes(x = country)) +
+  geom_bar(fill = '#3264ce') +
+  theme_minimal() +
+  labs(y = "Number of participants",
+       x = "Country of residence",
+       title = "Survey participation by country of residence")
+
+```        
 
 
 ## The end
